Preventing 'jumping' sections after load

--- a/frontend/layouts/messages/MessagesLayout.module.scss
+++ b/frontend/layouts/messages/MessagesLayout.module.scss
@@ -8,6 +8,7 @@
     gap: 4px;
     padding-right: var(--spacing-primary);
     border-right: 2px solid var(--background-tertiary);
+    height: calc(100vh - var(--navbar-height) - var(--spacing-primary))
 }
 .sidebar-header {
     font-weight: 600;
@@ -19,7 +20,7 @@
     padding: 8px 10px;
     border-radius: var(--border-radius-primary);
     text-align: unset;
-    width: 200px;
+    width: 220px;
     display: flex;
     align-items: center;
     gap: var(--spacing-primary);
