--- a/frontend/styles/Messages.module.scss
+++ b/frontend/styles/Messages.module.scss
@@ -2,7 +2,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    height: calc(100vh - var(--navbar-height) - var(--spacing-primary) * 2);
+    padding-bottom: var(--spacing-primary);
 }
 .header {
     padding: calc(var(--spacing-primary) / 2) var(--spacing-primary) var(--spacing-primary);
